Better expression for current version, whitelist instead of blacklist